--- a/META.yml
+++ b/META.yml
@@ -21,13 +21,14 @@ name: Email-Simple-Markdown
 provides:
   Email::Simple::Markdown:
     file: lib/Email/Simple/Markdown.pm
-    version: v0.3.0
+    version: v0.3.1
 requires:
   Carp: 0
   Email::Abstract: 0
   Email::MIME: 0
   Email::Simple: 0
   List::Util: 0
+  Text::MultiMarkdown: 0
   parent: 0
   strict: 0
   warnings: 0
@@ -35,7 +36,7 @@ resources:
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Email-Simple-Markdown
   homepage: http://search.cpan.org/dist/Email-Simple-Markdown/
   repository: https://github.com/yanick/Email-Simple-Markdown.git
-version: 0.3.0
+version: 0.3.1
 x_author_pledge:
   version: 1
 x_authority: cpan:YANICK
