--- a/META.yml
+++ b/META.yml
@@ -3,16 +3,15 @@ abstract: 'simple email creation with auto text and html multipart body'
 author:
   - 'Yanick Champoux <yanick@babyl.dyndns.org>'
 build_requires:
-  File::Find: 0
-  File::Temp: 0
+  File::Spec: 0
+  IO::Handle: 0
+  IPC::Open3: 0
   Module::Build: 0.3601
-  Scalar::Util: 0
-  Test::More: 0.94
-  perl: 5.004
+  Test::More: 0.88
 configure_requires:
   Module::Build: 0.3601
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300010, CPAN::Meta::Converter version 2.120630'
+generated_by: 'Dist::Zilla version 4.300037, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -21,7 +20,7 @@ name: Email-Simple-Markdown
 provides:
   Email::Simple::Markdown:
     file: lib/Email/Simple/Markdown.pm
-    version: v0.5.0
+    version: v0.5.1
 requires:
   Carp: 0
   Email::Abstract: 0
@@ -36,7 +35,11 @@ resources:
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Email-Simple-Markdown
   homepage: http://search.cpan.org/dist/Email-Simple-Markdown/
   repository: https://github.com/yanick/Email-Simple-Markdown.git
-version: 0.5.0
+version: 0.5.1
 x_author_pledge:
   version: 1
 x_authority: cpan:YANICK
+x_contributors:
+  - 'Alessandro Ranellucci <aar@cpan.org>'
+  - 'Gavin Carr <gavin@openfusion.com.au>'
+  - 'Yanick Champoux <yanick@cpan.org>'
