--- a/META.yml
+++ b/META.yml
@@ -1,45 +1,45 @@
 ---
 abstract: 'simple email creation with auto text and html multipart body'
 author:
-  - 'Yanick Champoux <yanick@babyl.dyndns.org>'
+  - 'Yanick Champoux <yanick@cpan.org>'
 build_requires:
-  File::Spec: 0
-  IO::Handle: 0
-  IPC::Open3: 0
-  Module::Build: 0.3601
-  Test::More: 0.88
+  File::Spec: '0'
+  IO::Handle: '0'
+  IPC::Open3: '0'
+  Module::Build: '0.28'
+  Test::More: '0.88'
+  perl: '5.006'
 configure_requires:
-  Module::Build: 0.3601
+  Module::Build: '0.28'
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300037, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Dist::Zilla version 5.023, CPAN::Meta::Converter version 2.142690'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: Email-Simple-Markdown
 provides:
   Email::Simple::Markdown:
     file: lib/Email/Simple/Markdown.pm
-    version: v0.5.2
+    version: v0.5.3
 requires:
-  Carp: 0
-  Email::Abstract: 0
-  Email::MIME: 0
-  Email::Simple: 0
-  List::Util: 0
-  Text::MultiMarkdown: 0
-  parent: 0
-  strict: 0
-  warnings: 0
+  Carp: '0'
+  Email::Abstract: '0'
+  Email::MIME: '0'
+  Email::Simple: '0'
+  List::Util: '0'
+  Text::MultiMarkdown: '0'
+  parent: '0'
+  strict: '0'
+  warnings: '0'
 resources:
-  bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Email-Simple-Markdown
-  homepage: http://search.cpan.org/dist/Email-Simple-Markdown/
+  bugtracker: https://github.com/yanick/Email-Simple-Markdown/issues
+  homepage: https://github.com/yanick/Email-Simple-Markdown
   repository: https://github.com/yanick/Email-Simple-Markdown.git
-version: 0.5.2
+version: 0.5.3
 x_author_pledge:
   version: 1
 x_authority: cpan:YANICK
 x_contributors:
   - 'Alessandro Ranellucci <aar@cpan.org>'
   - 'Gavin Carr <gavin@openfusion.com.au>'
-  - 'Yanick Champoux <yanick@cpan.org>'
